# gitignore-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/gitignore_cli/: __init__.py  api.py  cli.py  exceptions.py  formatter.py  service.py
tests/: conftest.py  test_api.py  test_cli.py  test_formatter.py  test_service.py
